package hw3.Command;

public interface Command {
    void execute();
    void undo();
}